# Compiler

./: .clang-format  AST.cfg.dot  AST.dot  CMakeLists.txt  README.md  activate
Bytecode/: CMakeLists.txt
Bytecode/include/: Bytecode.h  Pass.h
Bytecode/src/: Bytecode.cpp
Bytecode/src/passes/: BranchInversionPass.cpp  BranchToReturnPass.cpp  CallingConventionPass.cpp  CompareInversionPass.cpp  ConstantBranchPass.cpp  DeadCodeAfterTerminatorPass.cpp  JumpPeepholePass.cpp  JumpThreadingPass.cpp  JumpToNextPass.cpp  LoadStoreForwardingPass.cpp  PassFactories.h  PassPipeline.cpp  PassUtils.h  PushPopFoldPass.cpp  RedundantMovePass.cpp  RegisterAllocationPass.cpp  RemoveNopPass.cpp
Common/: CMakeLists.txt
Common/cmake/: CompilerCodegen.cmake
Common/include/Common/: FileIO.h  Graphviz.h  Identifier.h  NumberParsing.h  StringEscape.h
Common/src/: FileIO.cpp  Graphviz.cpp  Identifier.cpp  StringEscape.cpp
ExampleCalculator/: CMakeLists.txt  Calculator.cpp  ExampleInputLexer.lex  Input.txt
ExampleLR0Parser/: CMakeLists.txt  Driver.cpp  ExampleInputLexer.lex  Input.txt
ExampleLR1Calculator/: Calculator.cpp  ExampleInputLexer.lex  ExampleLR1Calculator.lr1
ExampleLR1Parser/: CMakeLists.txt  Input.txt
ExampleLexer/: CMakeLists.txt  Driver.cpp  ExampleLexer.lex
ExampleSLRParser/: CMakeLists.txt  Driver.cpp  ExampleInputLexer.lex  ExampleSLRParser.slr  Input.txt
Examples/: CallArgClobber.neon  Mandelbrot.txt  Raytracer.neon  Raytracer.txt  RaytracerOutput.txt  Shapes.neon
Frontend/: CMakeLists.txt  Input.neon  Neon.pg  NeonLexer.lex
Frontend/include/: AST.h  CompilerPipeline.h  Frontend.h  SymbolTable.h
Frontend/src/: CFG.cpp  CompilerMain.cpp  Frontend.cpp  IRBackend.cpp  Interpreter.cpp  Main.cpp  Parser.cpp  SymbolTable.cpp
Frontend/tests/: AstTest.cpp
IR/: CMakeLists.txt
IR/include/: IR.h  Pass.h
IR/src/: IR.cpp  IRBinary.cpp
IR/src/passes/: BranchInversionPass.cpp  BranchSimplificationPass.cpp  CommonSubexpressionEliminationPass.cpp  CompareInversionPass.cpp  ConstantFoldingPass.cpp  ControlFlowCleanupPass.cpp  CopyPropagationPass.cpp  DeadLocalStoreEliminationPass.cpp  DeadTempEliminationPass.cpp  DevirtualizeCallPass.cpp  IdentityArithmeticPass.cpp  InliningPass.cpp  LinearBlockMergePass.cpp  LoadStoreForwardingPass.cpp  PassFactories.h  PassPipeline.cpp  PassUtils.h  RedundantMovePass.cpp  ResolveObjectAccessPass.cpp  UnreachableBlockEliminationPass.cpp
Interpreter/: CMakeLists.txt  Input.neon  Input.txt  Language.pg  LanguageLexer.lex  Neon.pg  NeonLexer.lex
Interpreter/StdLib/: Complex.txt  Core.txt  Deflate.txt  IO.txt  Math.txt  PNG.txt
Interpreter/include/: AST.h  CFG.h  Interpreter.h  SymbolTable.h
Interpreter/src/: CFG.cpp  IRBackend.cpp  Interpreter.cpp  Main.cpp  SymbolTable.cpp
Interpreter/tests/: AstTest.cpp
LR0ParserGenerator/src/: CLI.cpp  Generator.cpp  Main.cpp  Parser.cpp
LR1ParserGenerator/: CMakeLists.txt  LR1SpecLexer.lex
LR1ParserGenerator/include/: LR1ParserGenerator.h
LR1ParserGenerator/src/: CLI.cpp  Generator.cpp  Main.cpp  Parser.cpp
Legacy/ExampleCalculator/: CMakeLists.txt  Calculator.cpp  ExampleCalculator.pg
Legacy/ExampleLR0Parser/: CMakeLists.txt  ExampleLR0Parser.lr0
Legacy/ExampleLR1Calculator/: CMakeLists.txt
Legacy/ExampleLR1Parser/: CMakeLists.txt  Driver.cpp
Legacy/ExampleLexer/: CMakeLists.txt  Driver.cpp  Input.neon
Legacy/ExampleSLRParser/: CMakeLists.txt
Legacy/LR0ParserGenerator/: CMakeLists.txt  LR0SpecLexer.lex
Legacy/LR0ParserGenerator/include/: LR0ParserGenerator.h
Legacy/LR0ParserGenerator/src/: Parser.cpp
Legacy/Parser/: CMakeLists.txt  Input.neon  Neon.pg  NeonLexer.lex
Legacy/Parser/include/: AST.h  Parser.h
Legacy/Parser/src/: Parser.cpp
Legacy/Parser/tests/: AstTest.cpp
Legacy/SLRParserGenerator/: SLRSpecLexer.lex
Legacy/SLRParserGenerator/src/: Main.cpp  Parser.cpp
LexerGenerator/: CMakeLists.txt
LexerGenerator/include/: Generator.h
LexerGenerator/src/: CLI.cpp  Generator.cpp  Main.cpp  Parser.cpp
Parser/: CMakeLists.txt  Input.txt  Language.pg  LanguageLexer.lex
Parser/include/: AST.h
Parser/src/: Parser.cpp
Parser/tests/: AstTest.cpp
ParserGenerator/: CMakeLists.txt  Stage2Spec.pg  Stage2SpecLexer.lex
ParserGenerator/include/: ParserGenerator.h
ParserGenerator/src/: CLI.cpp  Generator.cpp  Main.cpp  Parser.cpp
ParserGeneratorStage1/: CMakeLists.txt
ParserGeneratorStage1/include/: CST.h  ParserGeneratorStage1.h
ParserGeneratorStage1/src/: CLI.cpp  CST.cpp  Generator.cpp  Main.cpp  Parser.cpp
Regex/: CMakeLists.txt
Regex/include/: DFA.h  DFAMinimizer.h  NFA.h  Parser.h
Regex/src/: DFA.cpp  DFAMinimizer.cpp  NFA.cpp  Parser.cpp
Regex/tests/: DFAMinimizerTests.cpp  DFATests.cpp  NFATests.cpp  ParserTests.cpp
SLRParserGenerator/: CMakeLists.txt
SLRParserGenerator/include/: SLRParserGenerator.h
SLRParserGenerator/src/: CLI.cpp  Generator.cpp  Parser.cpp
StdLib/: ArrayList.neon  Complex.neon  Core.neon  Deflate.neon  HashMap.neon  IO.neon  LinkedList.neon  Math.neon  PNG.neon
VM/: CMakeLists.txt
VM/include/: VM.h
VM/src/: Main.cpp  VM.cpp
