cmake_minimum_required(VERSION 3.20)
project(Compiler LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# Common output layout for all subprojects/targets.
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")

foreach (config IN ITEMS Debug Release RelWithDebInfo MinSizeRel)
    string(TOUPPER "${config}" config_upper)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${config_upper} "${CMAKE_BINARY_DIR}/bin")
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${config_upper} "${CMAKE_BINARY_DIR}/lib")
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${config_upper} "${CMAKE_BINARY_DIR}/lib")
endforeach ()

include(CTest)
include("${CMAKE_CURRENT_SOURCE_DIR}/Common/cmake/CompilerCodegen.cmake")

add_subdirectory(Common)
add_subdirectory(Regex)
add_subdirectory(LexerGenerator)
add_subdirectory(ExampleLexer)
add_subdirectory(LR0ParserGenerator)
add_subdirectory(ExampleLR0Parser)
add_subdirectory(SLRParserGenerator)
add_subdirectory(ExampleSLRParser)
add_subdirectory(LR1ParserGenerator)
add_subdirectory(ParserGeneratorStage1)
add_subdirectory(ParserGenerator)
add_subdirectory(Parser)
add_subdirectory(ExampleLR1Parser)
add_subdirectory(ExampleLR1Calculator)
add_subdirectory(ExampleCalculator)
